Effective Java Notes Part 3